--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,33 @@ version: '3.6'
 #  - ./:/usr/src/smart-brain-api  
 
 services:
+
+  # BACKEND
   smart-brain-api:
     container_name: backend
     build: ./
     command: npm start
     working_dir: /usr/src/smart-brain-api
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_USER: sally
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: smart-brain-docker
+    links:
+      - postgres
     ports:
       - "3000:3000"
     volumes:
       - ./:/usr/src/smart-brain-api  
+
+  # DB
+  postgres:
+    container_name: postgres
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_USER: sally
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: smart-brain-docker
+    image: postgres    
+    ports:
+      - "5432:5432"
