add postgres uri variable to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,7 @@ services:
     command: npm start
     working_dir: /usr/src/smart-brain-api
     environment:
-      POSTGRES_HOST: postgres
-      POSTGRES_USER: sally
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: smart-brain-docker
+      POSTGRES_URI: postgres://sally:secret@postgres:5432/smart-brain-docker
     links:
       - postgres
     ports:
