--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -3,5 +3,5 @@ FROM postgres:10.3
 # create users and login file
 # make new folder tables
 ADD /tables/ /docker-entrypoint-initdb.d/tables/
-ADD deploy_schemas.sql /docker-entrypoint-initdb.d/tables/
+ADD deploy_schemas.sql /docker-entrypoint-initdb.d/
 
