--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "pg": "^7.4.0"
   },
