--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "morgan": "^1.9.0",
